# ascend_uav_autonomy

./: .gitignore  README.md
src/camera_logger/: package.xml  setup.cfg  setup.py
src/camera_logger/camera_logger/: camera_logger_node.py
src/emergency_manager/: package.xml  setup.cfg  setup.py
src/emergency_manager/emergency_manager/: emergency_manager_node.py
src/mission_fsm/: package.xml  setup.py
src/mission_fsm/mission_fsm/: mission_fsm_node.py
