<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"?>

<package format="3">
  <name>camera_logger</name>
  <version>0.0.0</version>
  <description>Camera logger node</description>

  <maintainer email="bharatha01@todo.todo">bharatha01</maintainer>
  <license>TODO: License declaration</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
